--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "type": "git",
     "url": "git+https://github.com/KhitrovMaksim/user-accounts.git"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "lint": "eslint . && prettier -c \"**/*.js\"",
+    "dev": "nodemon src/index.js",
     "format": "eslint . --fix && prettier --write \"**/*.js\"",
     "prepare": "husky install"
   },
@@ -31,21 +32,37 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "husky": "^8.0.0",
-    "lint-staged": "^14.0.0"
+    "lint-staged": "^14.0.0",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.1.1"
   },
   "dependencies": {
     "@apollo/server": "^4.9.1",
+    "@apollo/subgraph": "^2.4.12",
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.5.4",
     "@babel/preset-env": "^7.20.2",
+    "@graphql-tools/load-files": "7.0.0",
+    "@graphql-tools/merge": "9.0.0",
+    "@graphql-tools/schema": "10.0.0",
+    "@prisma/client": "^5.1.1",
+    "argon2": "^0.31.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "graphql": "^16.8.0",
+    "graphql-middleware": "^6.1.35",
     "graphql-scalars": "^1.22.2",
-    "prettier": "2.8.3"
+    "graphql-shield": "^7.6.5",
+    "graphql-tag": "^2.12.6",
+    "graphql-tools": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "prettier": "2.8.3",
+    "yup": "^1.2.0"
   }
 }
