--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 JWT_SECRET=super_secret
-DATABASE_URL=postgresql://user:password@localhost:5432/user-accounts
+DATABASE_URL=postgresql://postgres:postgres@localhost:5433/user-accounts
