--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,19 +1,29 @@
 version: '3.1'
 
 services:
-  db:
+  postgres:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_PASSWORD: "password"
-      POSTGRES_USER: "user"
-      POSTGRES_DB: "user-accounts"
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=user-accounts
+      - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 1s
-      timeout: 3s
-      retries: 30
+      - '5433:5432'
     volumes:
-      - ./docker-data/db:/var/lib/postgresql/data
+      - ./docker-data/user-accounts:/var/lib/postgresql/data
+
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: npm start
+    environment:
+      - PORT=3000
+      - JWT_SECRET=super_secret
+      - DATABASE_URL=postgresql://postgres:postgres@host.docker.internal:5433/user-accounts
+    ports:
+      - '3000:3000'
+    depends_on:
+      - postgres
