--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "husky": "^8.0.0",
     "lint-staged": "^14.0.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1",
+    "prisma-erd-generator-markdown": "^1.3.1"
   },
   "dependencies": {
     "@apollo/server": "^4.9.1",
@@ -43,7 +44,6 @@
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.5.4",
     "@babel/preset-env": "^7.20.2",
-    "@graphql-tools/load-files": "7.0.0",
     "@graphql-tools/merge": "9.0.0",
     "@graphql-tools/schema": "10.0.0",
     "@prisma/client": "^5.1.1",
@@ -54,12 +54,10 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
-    "express-jwt": "^8.4.1",
     "graphql": "^16.8.0",
     "graphql-middleware": "^6.1.35",
     "graphql-scalars": "^1.22.2",
     "graphql-shield": "^7.6.5",
-    "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.0",
     "jsonwebtoken": "^9.0.1",
     "prettier": "2.8.3",
